NSEXXXMovingAverageDetailEntityMakerJob is now restored